--- a/Resources/views/campaign/tab/lists.html.twig
+++ b/Resources/views/campaign/tab/lists.html.twig
@@ -15,7 +15,7 @@
     {% for list in params.lists.lists %}
         <tr>
             <td>{{ list.id }}</td>
-            <td>{{ list.name }}</td>
+            <td><a href="{{ path("smileezcampaign_list_view", {"id": list.id}) }}">{{ list.name }}</a></td>
             <td>{{ list.date_created }}</td>
             <td>{{ list.stats.member_count }}</td>
             <td></td>
@@ -25,3 +25,8 @@
 
     </tbody>
 </table>
+
+<p class="ez-table-data-buttons">
+    <a href="{{ path('smileezcampaign_lists_new') }}" class="pure-button ez-button" data-icon="&#xe616;">{{ 'list.new'|trans }}</a>
+    <a href="{{ path('smileezcampaign_lists_folder_new') }}" class="pure-button ez-button" data-icon="&#xe616;">{{ 'list.folder.new'|trans }}</a>
+</p>
