--- a/Resources/views/campaign/campaignFolders/new.html.twig
+++ b/Resources/views/campaign/campaignFolders/new.html.twig
@@ -8,7 +8,7 @@
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
         {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
-        {link: null, label: 'New list'|trans}
+        {link: null, label: 'New campaign folder'|trans}
     ] %}
     {{ parent() }}
 {% endblock %}
