--- a/Resources/views/campaign/campaigns/new.html.twig
+++ b/Resources/views/campaign/campaigns/new.html.twig
@@ -7,8 +7,8 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-    {link: path('admin_dashboard'), label: 'dashboard.title'|trans({}, 'dashboard')},
-    {link: null, label: 'Campaign'|trans}
+        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: null, label: 'New campaign'|trans}
     ] %}
     {{ parent() }}
 {% endblock %}
