--- a/Resources/public/css/views/fields/edit/campaign.css
+++ b/Resources/public/css/views/fields/edit/campaign.css
@@ -1,9 +1,9 @@
-.smileezuicampaign-input-ui {
+.smile-campaign-input-ui {
     width: 100%;
     display: inline-block;
     vertical-align: bottom;
 }
 
-.smileezuicampaign-input-ui input {
+.smile-campaign-input-ui input {
     width: 100%;
 }
