--- a/Resources/views/field_types.html.twig
+++ b/Resources/views/field_types.html.twig
@@ -1,8 +1,9 @@
 {% extends 'EzSystemsRepositoryFormsBundle:ContentType:field_types.html.twig' %}
 
-{% block smilecampaigncampaign_field_definition_edit %}
-    <div class="smilecampaigncampaign-default-value{% if group_class is not empty %} {{ group_class }}{% endif %}">
+{% block smilecampaign_field_definition_edit %}
+    <div class="smilecampaign-default-value{% if group_class is not empty %} {{ group_class }}{% endif %}">
         {{- form_label(form.defaultValue) -}}
         {{- form_errors(form.defaultValue) -}}
+        {{- form_widget(form.defaultValue) -}}
     </div>
 {% endblock %}
