--- a/Resources/views/campaign/campaignFolders/edit.html.twig
+++ b/Resources/views/campaign/campaignFolders/edit.html.twig
@@ -10,11 +10,9 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-    {link: path("admin_dashboard"), label: "dashboard.title"|trans({}, "dashboard")},
-    {link: path("admin_contenttype"), label: "content_type.dashboard_title"|trans()},
-    {link: null, label: editTitle}
+        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: null, label: editTitle}
     ] %}
-
     {{ parent() }}
 {% endblock %}
 
