--- a/Resources/views/campaign/list/edit.html.twig
+++ b/Resources/views/campaign/list/edit.html.twig
@@ -33,6 +33,42 @@
                 {{ form_errors(form.name) }}
                 {{ form_widget(form.name) }}
             </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.company) }}
+                {{ form_errors(form.company) }}
+                {{ form_widget(form.company) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.address) }}
+                {{ form_errors(form.address) }}
+                {{ form_widget(form.address) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.city) }}
+                {{ form_errors(form.city) }}
+                {{ form_widget(form.city) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.state) }}
+                {{ form_errors(form.state) }}
+                {{ form_widget(form.state) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.zip) }}
+                {{ form_errors(form.zip) }}
+                {{ form_widget(form.zip) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.country) }}
+                {{ form_errors(form.country) }}
+                {{ form_widget(form.country) }}
+            </div>
         </fieldset>
 
         <div class="pure-controls">
