--- a/Resources/views/campaign/list/edit.html.twig
+++ b/Resources/views/campaign/list/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends "eZPlatformUIBundle::pjax_admin.html.twig" %}
+{% form_theme form 'SmileEzUICampaignBundle:form:fields.html.twig' %}
 
 {% trans_default_domain "smileezuicampaign" %}
 
@@ -35,39 +36,15 @@
             </div>
 
             <div class="pure-control-group">
-                {{ form_label(form.company) }}
-                {{ form_errors(form.company) }}
-                {{ form_widget(form.company) }}
+                {{ form_label(form.contact) }}
+                {{ form_errors(form.contact) }}
+                {{ form_widget(form.contact) }}
             </div>
 
             <div class="pure-control-group">
-                {{ form_label(form.address) }}
-                {{ form_errors(form.address) }}
-                {{ form_widget(form.address) }}
-            </div>
-
-            <div class="pure-control-group">
-                {{ form_label(form.city) }}
-                {{ form_errors(form.city) }}
-                {{ form_widget(form.city) }}
-            </div>
-
-            <div class="pure-control-group">
-                {{ form_label(form.state) }}
-                {{ form_errors(form.state) }}
-                {{ form_widget(form.state) }}
-            </div>
-
-            <div class="pure-control-group">
-                {{ form_label(form.zip) }}
-                {{ form_errors(form.zip) }}
-                {{ form_widget(form.zip) }}
-            </div>
-
-            <div class="pure-control-group">
-                {{ form_label(form.country) }}
-                {{ form_errors(form.country) }}
-                {{ form_widget(form.country) }}
+                {{ form_label(form.campaign) }}
+                {{ form_errors(form.campaign) }}
+                {{ form_widget(form.campaign) }}
             </div>
         </fieldset>
 
