finish campaign list edit/create/delete

--- a/Resources/views/campaign/list/edit.html.twig
+++ b/Resources/views/campaign/list/edit.html.twig
@@ -42,9 +42,15 @@
             </div>
 
             <div class="pure-control-group">
-                {{ form_label(form.campaign) }}
-                {{ form_errors(form.campaign) }}
-                {{ form_widget(form.campaign) }}
+                {{ form_label(form.permission_reminder) }}
+                {{ form_errors(form.permission_reminder) }}
+                {{ form_widget(form.permission_reminder) }}
+            </div>
+
+            <div class="pure-control-group">
+                {{ form_label(form.campaign_defaults) }}
+                {{ form_errors(form.campaign_defaults) }}
+                {{ form_widget(form.campaign_defaults) }}
             </div>
         </fieldset>
 
