prepare campaign edit/create/delete

--- a/Resources/views/campaign/campaign/view.html.twig
+++ b/Resources/views/campaign/campaign/view.html.twig
@@ -44,7 +44,7 @@
             </div>
 
             <div class="ez-toolbar">
-                <a href="{{ path('smileezcampaign_campaign_edit', {'id': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans|desc("Edit") }}</a>
+                <a href="{{ path('smileezcampaign_campaign_edit', {'campaignID': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans|desc("Edit") }}</a>
             </div>
         </section>
     </section>
