--- a/Resources/views/campaign/tab/campaigns.html.twig
+++ b/Resources/views/campaign/tab/campaigns.html.twig
@@ -18,25 +18,36 @@
         </tr>
     </thead>
     <tbody>
-
         {% for campaign in params.campaigns.campaigns %}
             <tr>
                 <td>{{ campaign.id }}</td>
-                <td><a href="{{ path("smileezcampaign_campaign_view", {"id": campaign.id}) }}">{{ campaign.settings.title }}</a></td>
+                <td><a href="{{ path("smileezcampaign_campaign_view", {"campaignID": campaign.id}) }}">{{ campaign.settings.title }}</a></td>
                 <td>{{ campaign.settings.subject_line }}</td>
                 <td>{{ campaign.create_time }}</td>
                 <td>{{ campaign.status }}</td>
                 <td>{{ campaign.emails_sent }}</td>
                 <td>{{ campaign.send_time }}</td>
                 <td>{{ campaign.recipients.list_name }}</td>
-                <td><a href="{{ path("smileezcampaign_campaign_edit", {'id': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans }}</a></td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td><a href="{{ path("smileezcampaign_campaign_edit", {'campaignID': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans }}</a></td>
+                <td>
+                    {% set deleteForm = params.delete_forms_by_id[campaign.id] %}
+                    {{ form_start(deleteForm, {"action": path("smileezcampaign_campaign_delete", {"campaignID": campaign.id})}) }}
+                    {{ form_widget(deleteForm.campaignID) }}
+                    {{
+                        form_widget(
+                            deleteForm.delete,
+                            {
+                                "attr": {"class": "pure-button ez-button ez-remove-section-button ez-font-icon ez-button-delete"}
+                            }
+                        )
+                    }}
+                    {{ form_end(deleteForm) }}
+                </td>
             </tr>
         {% endfor %}
-
     </tbody>
 </table>
 
