--- a/Resources/views/campaign/index.html.twig
+++ b/Resources/views/campaign/index.html.twig
@@ -4,14 +4,14 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-        {link: null, label: 'Campaign'|trans}
+        {link: null, label: 'Campaigns'|trans}
     ] %}
     {{ parent() }}
 {% endblock %}
 
 {% block header_title %}
     <h1 class="smileezuicampaign-status-title" data-icon="&#xe622;">
-        {{ 'Campaign'|trans }}
+        {{ 'Campaigns'|trans }}
     </h1>
 {% endblock %}
 
