--- a/Resources/views/campaign/campaign/view.html.twig
+++ b/Resources/views/campaign/campaign/view.html.twig
@@ -7,7 +7,7 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: path('smileezcampaign_campaign', {'tabItem': 'campaigns'}), label: 'Campaigns'|trans},
         {link: null, label: campaign.settings.title}
     ] %}
     {{ parent() }}
@@ -44,7 +44,7 @@
             </div>
 
             <div class="ez-toolbar">
-                <a href="{{ path('smileezcampaign_campaign_edit', {'campaignID': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans|desc("Edit") }}</a>
+                    <a href="{{ path('smileezcampaign_campaign_edit', {'campaignID': campaign.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'campaign.edit'|trans|desc("Edit") }}</a>
             </div>
         </section>
     </section>
