--- a/Resources/views/campaign/campaignFolders/edit.html.twig
+++ b/Resources/views/campaign/campaignFolders/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% trans_default_domain "smileezuicampaign" %}
 
-{% set editTitle = campaignFolder.new ? "campaign.folder.create.title"|trans() : "campaign.folder.edit.title"|trans({"%identifier%": campaignFolder.id}) %}
+{% set editTitle = campaignFolder.new ? "campaign.folder.create.title"|trans() : "campaign.folder.edit.title"|trans({"%id%": campaignFolder.id}) %}
 
 {% block title %}
     {{ editTitle }}
@@ -10,7 +10,7 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: path('smileezcampaign_campaign', {'tabItem': 'campaigns'}), label: 'Campaigns'|trans},
         {link: null, label: editTitle}
     ] %}
     {{ parent() }}
