--- a/Resources/views/campaign/list/edit.html.twig
+++ b/Resources/views/campaign/list/edit.html.twig
@@ -3,7 +3,7 @@
 
 {% trans_default_domain "smileezuicampaign" %}
 
-{% set editTitle = campaignList.new ? "campaign.list.create.title"|trans() : "campaign.list.edit.title"|trans({"%identifier%": campaignList.id}) %}
+{% set editTitle = campaignList.new ? "campaign.list.create.title"|trans() : "campaign.list.edit.title"|trans({"%id%": campaignList.id}) %}
 
 {% block title %}
     {{ editTitle }}
@@ -11,7 +11,7 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: path('smileezcampaign_campaign', {'tabItem': 'lists'}), label: 'Campaigns'|trans},
         {link: null, label: editTitle}
     ] %}
     {{ parent() }}
