--- a/Resources/views/campaign/list/view.html.twig
+++ b/Resources/views/campaign/list/view.html.twig
@@ -7,7 +7,7 @@
 
 {% block header_breadcrumbs %}
     {% set breadcrumb_items = [
-        {link: path('smileezcampaign_campaign'), label: 'Campaign'|trans},
+        {link: path('smileezcampaign_campaign', {'tabItem': 'lists'}), label: 'Campaigns'|trans},
         {link: null, label: list.name}
     ] %}
     {{ parent() }}
