fix list edit link in list view

--- a/Resources/views/campaign/list/view.html.twig
+++ b/Resources/views/campaign/list/view.html.twig
@@ -28,7 +28,7 @@
             </div>
 
             <div class="ez-toolbar">
-                <a href="{{ path('smileezcampaign_list_edit', {'id': list.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'list.edit'|trans|desc("Edit") }}</a>
+                <a href="{{ path('smileezcampaign_list_edit', {'campaignListID': list.id}) }}" class="pure-button ez-button" data-icon="&#xe606;">{{ 'list.edit'|trans|desc("Edit") }}</a>
             </div>
         </section>
     </section>
