fix group field style

--- a/Resources/public/css/platform.css
+++ b/Resources/public/css/platform.css
@@ -23,3 +23,7 @@
 .ez-view-serversideview .smileezuicampaign-view .smileezuicampaign-metadata-name {
     width: 250px;
 }
+
+.pure-form-aligned .pure-control-group div div {
+    margin-bottom: .5em;
+}
