--- a/Resources/public/css/views/uicampaign.css
+++ b/Resources/public/css/views/uicampaign.css
@@ -1,21 +1,26 @@
-.ez-view-smileezuicampaignview {
+.ez-view-smileezuicampaignview,
+.ez-view-smileezuicampaignview-campaignedit {
     background: #fff;
     padding: 1em 2em;
 }
 
-.ez-view-smileezuicampaignview .ez-page-header {
+.ez-view-smileezuicampaignview .ez-page-header,
+.ez-view-smileezuicampaignview-campaignedit .ez-page-header {
     padding: 0;
 }
 
-.ez-view-smileezuicampaignview .ez-platform-version {
+.ez-view-smileezuicampaignview .ez-platform-version,
+.ez-view-smileezuicampaignview-campaignedit .ez-platform-version {
     margin-top: 0;
 }
 
-.ez-view-smileezuicampaignview {
+.ez-view-smileezuicampaignview,
+.ez-view-smileezuicampaignview-campaignedit {
     background: #F5F4F2;
 }
 
-.ez-view-smileezuicampaignview .ez-platform-version {
+.ez-view-smileezuicampaignview .ez-platform-version,
+.ez-view-smileezuicampaignview-campaignedit .ez-platform-version {
     font-size: 120%;
 }
 
