--- a/Resources/views/campaign/tab/campaigns.html.twig
+++ b/Resources/views/campaign/tab/campaigns.html.twig
@@ -53,7 +53,7 @@
         </table>
 
         <p class="ez-table-data-buttons">
-            <a href="{{ path('smileezcampaign_campaign_edit') }}" class="pure-button ez-button" data-icon="&#xe616;">{{ 'compaign.new'|trans }}</a>
+            <a href="{{ path('smileezcampaign_campaign_edit') }}" class="pure-button ez-button" data-icon="&#xe616;" data-route-name="smileezuiCampaignCampaignEditNavigation">{{ 'compaign.new'|trans }}</a>
             <a href="{{ path('smileezcampaign_folder_edit') }}" class="pure-button ez-button" data-icon="&#xe616;">{{ 'compaign.folder.new'|trans }}</a>
         </p>
     </div>
